# Autosolver

./: .gitignore  README.md  pyproject.toml  start_live_dashboard.cmd
.github/workflows/: deploy-dashboard.yml
agent/autosolver_agent/: __init__.py  baselines.py  provider.py  research.py
agent/autosolver_agent/prompts/: research_reflection.md  research_system.md
dashboard/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
dashboard/public/: demo-replay.json
dashboard/src/: App.tsx  styles.css  types.ts
examples/: offline_research_check.json  research_search_space.json  smoke_solve_result.json
examples/benchmarks/: benchmark_case_1.json  benchmark_case_2.json  benchmark_manifest.json
examples/instances/: sample_instance.json
scripts/: full_check.ps1  live_dashboard.ps1
solver/autosolver/: __init__.py  cli.py  web_control.py
solver/autosolver/core/: __init__.py  candidates.py  models.py  objective.py
solver/autosolver/eval/: __init__.py  benchmark.py  manifest.py  validation.py
solver/autosolver/io/: __init__.py  adapters.py  events.py  json_io.py  replay.py  submission.py
solver/autosolver/samples/: __init__.py  generator.py
solver/autosolver/solver/: __init__.py  common.py  cpsat.py  greedy.py  lns.py  portfolio.py
solver/tests/: conftest.py  test_adapter_and_objective.py  test_baselines.py  test_benchmark_and_research.py  test_candidates_and_solver.py  test_provider_config.py  test_provider_parsing.py  test_validation_and_generation.py  test_web_control.py
